--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <div class="wrapper">
                 <div class="parallax filter-gradient white" data-color="white">
                     <div class="parallax-background">
-                        <img class="parallax-background-image" src="assets/img/br-header-img.png">
+                        <img class="parallax-background-image" src="assets/img/br/br-bg-1.png">
                     </div>
                     <div class= "container" >
                         <div class="row">
                             <div class="col-md-5 hidden-xs">
                                 <div class="parallax-image">
-                                    <img class="phone" src="assets/img/br-ucm-200-meas.png" style="margin-top: 28px"/>
+                                    <img class="phone" src="assets/img/br/br-smart-sensor.png" style="margin-top: 28px"/>
                                 </div>
                             </div>
 
