--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="wrapper">
                 <div class="parallax filter-gradient white" data-color="white">
                     <div class="parallax-background">
-                        <img class="parallax-background-image" src="assets/img/br/br-bg-1.png">
+                        <img class="parallax-background img" src="assets/img/br/br-bg-1.png">
                     </div>
                     <div class= "container" >
                         <div class="row">
@@ -150,6 +150,9 @@
                 <h2>Model Details & Features</h2>
                 <p>Take a deeper look at this product and all of its associated details, features, and related information</p>
             </div>
+
+
+            
             <!--accordion containers start-->
             <div class="accordion-container">
                 <div class="accordion">
@@ -326,11 +329,11 @@
             <div class="parallax filter-gradient black" data-color="white">
                 
                 <div class="parallax-background">
-                    <img class ="parallax-background-image" src="assets/img/br/br-bg-2.png"/>
+                    <img class ="parallax-background-image" src="assets/img/br/br-bg-2.png" style="opacity: .2;"/>
                 </div>
                 <div class="info text-overlay">
-                    <h1 style="color:#333">Join the BlueRipple Revolution</h1>
-                    <p style="color:#333">Dive into a new era of groundwater management. Blue Ripple is not just a smart remote well monitoring system; it's a game-changer. Experience the future today – where data flows seamlessly, insights are crystal clear, and your wells are in the palm of your hands.</p>
+                    <h2 style="color:#333">Join the BlueRipple Revolution</h2>
+                    <h5 style="color:#333">Dive into a new era of groundwater management. Blue Ripple is not just a smart remote well monitoring system; it's a game-changer. Experience the future today – where data flows seamlessly, insights are crystal clear, and your wells are in the palm of your hands.</h5>
                     <a href="https://blueripple.tech/static/BlueRipple-UCM-200.pdf" class="btn btn-info btn-lg btn-fill">DOWNLOAD SPECS</a>
                 </div>
             </div>
@@ -374,10 +377,10 @@
                 </div>
             </footer>
         </div>
-</body>
+        <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+        <script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+        <script src="assets/js/bootstrap.js" type="text/javascript"></script>
+        <script src="assets/js/blueripple-landing-page.js" type="text/javascript"></script>
     </body>
-    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
-    <script src="assets/js/bootstrap.js" type="text/javascript"></script>
-    <script src="assets/js/awesome-landing-page.js" type="text/javascript"></script>
+
 </html>
