--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="wrapper">
                 <div class="parallax filter-gradient white" data-color="white">
                     <div class="parallax-background">
-                        <img class="parallax-background img" src="assets/img/br/br-bg-1.png">
+                        <img class="parallax-background-image" src="assets/img/br/br-bg-1.png">
                     </div>
                     <div class= "container" >
                         <div class="row">
@@ -84,8 +84,9 @@
                                     <h5 style="color:#000">
                                         <li>The most advanced remote well and groundwater monitoring solution available on the market today</li>
                                         <li>Data is captured and stored locally, automatically uploaded to the cloud</li>
-                                        <li>Minimizes power consumption for the longest battery service life</li>
-                                        <li>Advanced real-time diagnostics</li>
+                                        <li>Minimizes power consumption for maximum battery service life with offline reporting</li>
+                                        <li>Advanced real-time diagnostics with cloud data recording</li>
+                                        <li>Built upon more than twenty years of successful communications deployments within the industrial and utility control space</li>
                                     </h5>
                                 </div>
                                 <!--<div class="buttons">
@@ -119,7 +120,8 @@
             <h6 style="text-align:center;">NEVER LOSE YOUR DATA WITH BLUERIPPLE:</h6>
                 <h5>
                     <li class="li-info-section">BlueRipple has a large internal non-volatile storage memory system. Each device has a vault with a capacity of 128 MB which allows for more than <b>8 years</b> of data storage of critical site measurements. </li><br>     
-                    <li class="li-info-section">Site data is retained even after being uploaded to the cloud with offline recording. In other words, BlueRipple preserves the record despite any communication or network circumstance.</li>
+                    <li class="li-info-section">Site data is retained even after being uploaded to the cloud with offline recording. In other words, BlueRipple preserves the record despite any communication or network circumstance.</li><br>
+                    
                 </h5>
             </div>
         </div>
@@ -136,7 +138,7 @@
                                 <li>Advanced real-time diagnostics including critical communications metrics, battery voltage, temperature, humidity, orientation, vibration, and tampering detection.</li><br>
                                 <li>A modular solution that incorporates a well-protected wide-range DC input power system, ESD protection on all connections, and fault-tolerant protection</li><br>
                                     <li>Housed in a schedule 40 PVC enclosure that is IP67 rated and meets IEC 60068-2 environmental standards</li><br>
-                                <li>Built upon more than twenty years of successful communications deployments within the industrial and utility control space</li>
+
                                 </p>
                             </div>
                         </div>
@@ -269,7 +271,7 @@
                             <h3 class="header-text">Data Security Elevated</h3>
                             <p>This next-generation measuring system brings your field survey or monitoring application up to the 21st century with a fully forward-looking solution.<br>
                             </p>
-                            <a href="https://blueripple.tech" id="Demo3" class="btn btn-fill btn-info" data-button="info">Learn More</a>
+                            <a href="https://blueripple.tech" id="Demo3" class="btn btn-fill" data-button="info">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -329,7 +331,7 @@
             <div class="parallax filter-gradient black" data-color="white">
                 
                 <div class="parallax-background">
-                    <img class ="parallax-background-image" src="assets/img/br/br-bg-2.png" style="opacity: .2;"/>
+                    <img class ="parallax-background-image" src="assets/img/br/br-bg-2.png" style="opacity: .3"/>
                 </div>
                 <div class="info text-overlay">
                     <h2 style="color:#333">Join the BlueRipple Revolution</h2>
