--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@
                             <h3 class="header-text">Data Security Elevated</h3>
                             <p>This next-generation measuring system brings your field survey or monitoring application up to the 21st century with a fully forward-looking solution.<br>
                             </p>
-                            <a href="https://blueripple.tech" id="Demo3" class="btn btn-fill" data-button="info">Learn More</a>
+                            <a href="https://blueripple.tech" id="Demo3" class="btn btn-fill" data-button="info">Learn More &nbsp; ></a>
                         </div>
                     </div>
                 </div>
             </div>
-            
+            <div style="height: 100px;"></div>
             <div class="section section-testimonial">
                 <div class="container">
                     <h4 class="header-text text-center">What do those in the industry say about us?</h4>
@@ -327,16 +327,18 @@
                 </div>
             </div>
         </div>
+        <div style="height: 100px;"></div>
         <div class="section section-full-width">
-            <div class="parallax filter-gradient black" data-color="white">
+            <div class="parallax-second-bg">
                 
                 <div class="parallax-background">
-                    <img class ="parallax-background-image" src="assets/img/br/br-bg-2.png" style="opacity: .3"/>
+                    <img class ="parallax-background-image" src="assets/img/br/br-bg-2.png" style="opacity: .3;"/>
                 </div>
                 <div class="info text-overlay">
+                    <p><br><br><br><br><br></p>
                     <h2 style="color:#333">Join the BlueRipple Revolution</h2>
                     <h5 style="color:#333">Dive into a new era of groundwater management. Blue Ripple is not just a smart remote well monitoring system; it's a game-changer. Experience the future today – where data flows seamlessly, insights are crystal clear, and your wells are in the palm of your hands.</h5>
-                    <a href="https://blueripple.tech/static/BlueRipple-UCM-200.pdf" class="btn btn-info btn-lg btn-fill">DOWNLOAD SPECS</a>
+                    <a href="https://blueripple.tech/static/BlueRipple-UCM-200.pdf" class="btn btn-info btn-lg btn-fill">DOWNLOAD SPECS &nbsp; ></a>
                 </div>
             </div>
         </div>
